<resources>
    <!--  app_name manages what is seen on the top border  -->
    <string name="app_name">ShopSaver</string>
    <string name="shopsaver_text">ShopSaver</string>
    <string name="text_shop_better_today">Shop Better Today.</string>
    <string name="text_get_started">Get Started</string>
    <string name="email_hint">Email</string>
    <string name="password_create_hint">Password (at least 10 characters)</string>
    <string name="password_login_hint">Password</string>
    <string name="login_text">Login</string>
    <string name="or_text">OR</string>
    <string name="create_text">Create Account</string>
    <string name="username_hint">Username (at least 8 characters)</string>
    <string name="tracking_list_text">Tracking List</string>
    <string name="search_text">Search</string>
    <string name="enter_item_here_text">Enter Item Here</string>
    <string name="platform_text">Platform</string>
    <string name="go_to_item">Go to Item</string>
    <string name="signout">Sign Out</string>
    <string name="placeholder_text">Placeholder</string>
    <string name="add_item_to_track_text">Add Item to Track</string>
    <string name="no_products">No Products Added to Track</string>
    <string name="user_guide_text">User Guide</string>
    <string name="add_text">add</string>
    <string name="track_text">Track</string>
    <string name="get_started">Click on Any of the Tabs to Find out More</string>
    <string name="home">Home</string>
    <string name="delete_item_text">Delete Item</string>
    <string name="edit_price_expectation_text">Edit Price Expectation</string>

    <!--    Product Placeholder Names-->
    <string name="name_placeholder">Name</string>
    <string name="price_text">Price</string>
    <string name="url_text">Url</string>

    <!--    Platform Names-->
    <string name="amazon">Amazon</string>
    <string name="lazada">Lazada</string>
    <string name="qooten">Qoo10</string>

    <!--    User Guide Info-->
    <string name="search_info">
        Click on the Search Tab at the Homepage\n\n
        Enter the name of the item you want to search for\n\n
        After that, select from 3 Platforms, Amazon, Lazada and Qoo10\n\n
        Select at least 1 of them, and up to all of them\n\n
        After that, click Search to get your Results
    </string>
    <string name="add_info">
        Found an item that you want track?\n\n
        When the item results are displayed, click on the item\n\n
        Key in your expected price that you wish to purchase the item for\n\n
        After that, you can add it to be tracked
    </string>
    <string name="track_info">
        Click on the Tracking List Button to see the items you are currently tracking\n\n
        Run the Update Button to see the latest prices of your items\n\n
        Should any of the prices meet your expectation, go ahead and purchase it!
    </string>
    <string name="price_expectation">Price Expectation (e.g 32.25)</string>
    <string name="close_text">Close</string>
    <string name="price_expectation_text">Price Expectation</string>
    <string name="update_text">Update</string>
    <string name="change_password_text">Change Password</string>
    <string name="forgot_password_text">Forgot Password</string>
    <string name="send_text">Send</string>

</resources>