<?xml version="1.0" encoding="utf-8"?>
<!-- This layout is responsible for displaying 1 row of item-->
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/item_name_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/name_placeholder"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_platform_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/platform_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/item_image_tracking_list"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/item_price_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/price_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/price_expectation_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/price_expectation_text"
            android:textColor="@color/pastelGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_price_expectation_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/price_expectation_text"
            android:textColor="@color/pastelGreen"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_url_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:text="@string/url_text"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edit_price_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_price_expectation_text"
            android:minHeight="48dp"
            android:padding="10dp"
            android:paddingStart="10dp"
            android:paddingTop="15dp"
            android:paddingEnd="15dp"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/edit_item_button_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/edit_price_expectation_text"
            android:textColor="@color/teal_700"
            android:textStyle="bold" />



        <Button
            android:id="@+id/delete_item_button_tracking_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:text="@string/delete_item_text"
            android:textColor="@android:color/holo_red_dark"
            android:textStyle="bold" />


    </LinearLayout>


</androidx.cardview.widget.CardView>