<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/gradient_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UserGuideActivity">


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/guide_button_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/search_text"
                android:textColor="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guide_button_track"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098" />

            <Button
                android:id="@+id/guide_button_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_text"
                android:textColor="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guide_button_track"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098" />

            <Button
                android:id="@+id/guide_button_track"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/track_text"
                android:textColor="@color/teal_200"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guide_button_add"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/guide_button_search"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.098" />

        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/guide_scroll_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_started"
                android:textSize="20sp" />
        </ScrollView>

        <Button
            android:id="@+id/guide_home_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:backgroundTint="@color/peach"
            android:text="@string/home"
            android:textColor="@color/black" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>